completed the users and products parts, pending order management
